--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,5 @@
-hatch>=1.12.0,<2.0.0
+hatch==1.12.0
+hatchling==1.25
 isort>=5.13.2,<6.0.0
 pip-tools>=7.4.1,<8.0.0
 ply>=3.11,<4.0.0
@@ -13,5 +14,4 @@ sphinx-autodocgen==1.3
 sphinx-rtd-theme==2.0.0
 sphinx>=5.0.2,<9.0.0
 toml>=0.10.2,<1.0.0
-uv>=0.4.1,<1.0.0
 python-constraint>=1.4.0,<2.0.0
