git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-sphinx_docs/_build/singlehtml/index.html
+requirements.txt
+src/pycypher/__pycache__/__init__.cpython-312.pyc
+src/pycypher/__pycache__/cypher_lexer.cpython-312.pyc
+src/pycypher/__pycache__/cypher_parser.cpython-312.pyc
+src/pycypher/__pycache__/cypher.cpython-312.pyc
+src/pycypher/__pycache__/decorators.cpython-312.pyc
+src/pycypher/__pycache__/exceptions.cpython-312.pyc
+src/pycypher/__pycache__/fact.cpython-312.pyc
+src/pycypher/__pycache__/lexer.cpython-312.pyc
+src/pycypher/__pycache__/logger.cpython-312.pyc
+src/pycypher/__pycache__/node_classes.cpython-312.pyc
+src/pycypher/__pycache__/parser.cpython-312.pyc
+src/pycypher/__pycache__/parsetab.cpython-312.pyc
+src/pycypher/__pycache__/solver.cpython-312.pyc
+src/pycypher/__pycache__/test.cpython-312.pyc
+src/pycypher/__pycache__/tree_mixin.cpython-312.pyc
+tests/__pycache__/test_nmetl.cpython-312-pytest-8.3.3.pyc
+tests/__pycache__/test_pycypher.cpython-312-pytest-8.3.3.pyc
+tests/__pycache__/test_pycypher.cpython-312-pytest-8.3.4.pyc
+src/pycypher/parsetab.py
+src/pycypher/parser.out
