--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ dependencies = [
   "sphinx-rtd-theme==2.0.0",
   "sphinx>=5.0.2,<9.0.0",
   "toml>=0.10.2,<1.0.0",
+  "pytest-unordered==0.6.1,<1.0.0",
   "uv>=0.4.1,<1.0.0",
 ]
 
