--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ dependencies = [
   "rich>=13.8.0,<14.0.0",
   "ruff>=0.6.3,<1.0.0",
   "sphinx-autoapi==3.3.1,<4.0.0",
+  "networkx==3.4.2,<4.0.0",
   "sphinx-autodocgen==1.3",
   "sphinx-rtd-theme==2.0.0",
   "sphinx>=5.0.2,<9.0.0",
