--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,20 @@
 requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3.0"]
 build-backend = "hatchling.build"
 
+[tool.coverage.report]
+exclude_also = [
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+    ]
+
 [tool.ruff]
 exclude = [
     ".bzr",
@@ -85,6 +99,7 @@ dependencies = [
   "sphinx-autodocgen==1.3",
   "sphinx-rtd-theme==2.0.0",
   "sphinx>=5.0.2,<9.0.0",
+  "pytest-cov>=6.0.0,<7.0.0",
   "toml>=0.10.2,<1.0.0",
   "pytest-unordered==0.6.1,<1.0.0",
   "uv>=0.4.1,<1.0.0",
@@ -102,3 +117,14 @@ dev = ["hatch>=1.12.0,<2.0.0"]
 
 [project.scripts]
 pycypher = "pycypher.cli:main"
+
+[tool.poetry]
+name = "pycypher"  # REQUIRED, is the only field that cannot be marked as dynamic.
+version = "0.0.1"  # REQUIRED, although can be dynamic
+description = "Cypher for Python"
+readme = "README.md"
+keywords = ["neo4j", "cypher"]
+
+authors = [
+  "Zachary Ernst",
+]
