--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-requirements.txt
+./requirements.txt
 src/pycypher/__pycache__/__init__.cpython-312.pyc
 src/pycypher/__pycache__/cypher_lexer.cpython-312.pyc
 src/pycypher/__pycache__/cypher_parser.cpython-312.pyc
@@ -91,6 +91,9 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+sphinx_docs/_build/
+sphinx_docs/_build/doctrees/generated/*.doctree
+
 
 # PyBuilder
 .pybuilder/
@@ -187,3 +190,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+requirements.txt
+docs/objects.inv
+sphinx_docs/_build/html/api.html
+sphinx_docs/_build/doctrees/api.doctree
+src/pycypher/parser.out
+sphinx_docs/_build/singlehtml/index.html
