--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,16 +37,9 @@ line-length = 79
 indent-width = 4
 target-version = "py312"
 
-[tool.poetry]
-name = "pycypher"
-version = "0.0.1"
-description = "Cypher for Python"
-readme = "README.md"
-keywords = [ "neo4j", "cypher",]
-authors = [ "Zachary Ernst",]
-
 [tool.coverage.report]
-exclude_also = [ "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
+omit = ['cli.py']
+exclude_also = [ "def tree", "def print_tree", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
 
 [tool.pytest.ini_options]
 markers = [ "cypher",]
