facts generated queue and trigger processor stubbed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,4 +42,7 @@ omit = [ "cli.py",]
 exclude_also = [ "def tree", "def print_tree", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
 
 [tool.pytest.ini_options]
-markers = [ "cypher",]
+addopts = "-n 8"
+testpaths = [
+    "tests",
+]
