trigger lookup queue

--- a/src/pycypher/config/config.toml
+++ b/src/pycypher/config/config.toml
@@ -1,6 +1,6 @@
 [global]
 
 MONITOR_LOOP_DELAY = 5
-INNER_QUEUE_TIMEOUT = 1
-OUTER_QUEUE_TIMEOUT = 2
-LOGGING_LEVEL = "INFO"
+INNER_QUEUE_TIMEOUT = 2
+OUTER_QUEUE_TIMEOUT = 5
+LOGGING_LEVEL = "WARNING"
