--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,86 +1,170 @@
+vars:
+  - paths:
+      monorepo_path: /Users/zernst/git/pycypher-nmetl/
+      raw_data: /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/
+      source_dir: /Users/zernst/git/pycypher-nmetl/packages/fastopendata/src/fastopendata/
+
 stages:
   state_county_tract_puma:
-    cmd: wget https://www2.census.gov/geo/docs/maps-data/data/rel2020/2020_Census_Tract_to_2020_PUMA.txt -O - | sed $'1s/^\uFEFF//' > /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/state_county_tract_puma.csv
+    cmd: wget https://www2.census.gov/geo/docs/maps-data/data/rel2020/2020_Census_Tract_to_2020_PUMA.txt -O - | sed $'1s/^\uFEFF//' > ${paths.raw_data}/state_county_tract_puma.csv
     outs:
-    - packages/fastopendata/raw_data/state_county_tract_puma.csv
+    - ${paths.raw_data}/state_county_tract_puma.csv
   census_pus:
-    cmd: wget https://www2.census.gov/programs-surveys/acs/data/pums/2023/1-Year/csv_pus.zip
-      -O 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/csv_pus.zip
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' https://www2.census.gov/programs-surveys/acs/data/pums/2023/1-Year/csv_pus.zip -O ${paths.raw_data}/csv_pus_1_year.zip"
     outs:
-    - packages/fastopendata/raw_data/csv_pus.zip
-  unzip_psam:
+    - ${paths.raw_data}/csv_pus_1_year.zip
+  unzip_psam_p:
     cmd: unzip -o 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/csv_pus.zip
-      -d /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/
+      ${paths.raw_data}/csv_pus_1_year.zip
+      -d ${paths.raw_data}
     deps:
-    - packages/fastopendata/raw_data/csv_pus.zip
+    - ${paths.raw_data}/csv_pus_1_year.zip
     outs:
-    - packages/fastopendata/raw_data/psam_pusa.csv
-    - packages/fastopendata/raw_data/psam_pusb.csv
-  combine_psam:
+    - ${paths.raw_data}/psam_pusa.csv
+    - ${paths.raw_data}/psam_pusb.csv
+  unzip_psam_h:
+    cmd: unzip -o 
+      ${paths.raw_data}/csv_hus_5_year.zip
+      -d ${paths.raw_data}
+    deps:
+    - ${paths.raw_data}/csv_hus_5_year.zip
+    outs:
+    - ${paths.raw_data}/psam_husa.csv
+    - ${paths.raw_data}/psam_husb.csv
+  combine_psam_p:
     cmd: (cat 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_pusa.csv
+      ${paths.raw_data}/psam_pusa.csv
       > 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_pus.csv
+      ${paths.raw_data}/psam_pus.csv
       && cat 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_pusb.csv
+      ${paths.raw_data}/psam_pusb.csv
       | tail +2 >> 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_pus.csv)
+      ${paths.raw_data}/psam_pus.csv)
     deps:
-    - packages/fastopendata/raw_data/psam_pusa.csv
-    - packages/fastopendata/raw_data/psam_pusb.csv
+    - ${paths.raw_data}/psam_pusa.csv
+    - ${paths.raw_data}/psam_pusb.csv
     outs:
-    - packages/fastopendata/raw_data/psam_pus.csv
+    - ${paths.raw_data}/psam_pus.csv
+  combine_psam_h:
+    cmd: (cat 
+      ${paths.raw_data}/psam_husa.csv
+      > 
+      ${paths.raw_data}/psam_hus.csv
+      && cat 
+      ${paths.raw_data}/psam_husb.csv
+      | tail +2 >> 
+      ${paths.raw_data}/psam_hus.csv)
+    deps:
+    - ${paths.raw_data}/psam_husa.csv
+    - ${paths.raw_data}/psam_husb.csv
+    outs:
+    - ${paths.raw_data}/psam_hus.csv
   split_psam_to_housing_and_individual:
-    cmd: head -1 packages/fastopendata/raw_data/psam_pus.csv > packages/fastopendata/raw_data/psam_2023_individual.csv
-      && grep 2023GQ packages/fastopendata/raw_data/psam_pus.csv >> packages/fastopendata/raw_data/psam_2023_individual.csv
-      && head -1 packages/fastopendata/raw_data/psam_pus.csv > packages/fastopendata/raw_data/psam_2023_housing.csv
-      && grep 2023HU packages/fastopendata/raw_data/psam_pus.csv >> packages/fastopendata/raw_data/psam_2023_housing.csv
+    cmd: head -1 ${paths.raw_data}/psam_pus.csv > ${paths.raw_data}/psam_2023_individual.csv
+      && grep 2023GQ ${paths.raw_data}/psam_pus.csv >> ${paths.raw_data}/psam_2023_individual.csv
+      && head -1 ${paths.raw_data}/psam_pus.csv > ${paths.raw_data}/psam_2023_housing.csv
+      && grep 2023HU ${paths.raw_data}/psam_pus.csv >> ${paths.raw_data}/psam_2023_housing.csv
     deps:
-    - packages/fastopendata/raw_data/psam_pus.csv
+    - ${paths.raw_data}/psam_pus.csv
     outs:
-    - packages/fastopendata/raw_data/psam_2023_housing.csv
-    - packages/fastopendata/raw_data/psam_2023_individual.csv
+    - ${paths.raw_data}/psam_2023_housing.csv
+    - ${paths.raw_data}/psam_2023_individual.csv
   census_pus_5_year:
-    cmd: wget https://www2.census.gov/programs-surveys/acs/data/pums/2023/5-Year/csv_pus.zip
-      -O 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/csv_pus_5_year.zip
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' https://www2.census.gov/programs-surveys/acs/data/pums/2023/5-Year/csv_pus.zip -O ${paths.raw_data}/csv_pus_5_year.zip"
     outs:
-    - packages/fastopendata/raw_data/csv_pus_5_year.zip
+    - ${paths.raw_data}/csv_pus_5_year.zip
+  census_hus_5_year:
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' https://www2.census.gov/programs-surveys/acs/data/pums/2023/5-Year/csv_hus.zip -O ${paths.raw_data}/csv_hus_5_year.zip"
+    outs:
+    - ${paths.raw_data}/csv_hus_5_year.zip
   osm:
     cmd: wget https://download.geofabrik.de/north-america/us-latest.osm.pbf -O 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/us-latest.osm.pbf
+      ${paths.raw_data}/us-latest.osm.pbf
     outs:
-    - packages/fastopendata/raw_data/us-latest.osm.pbf
+    - ${paths.raw_data}/us-latest.osm.pbf
   united_states_nodes_csv:
-    cmd: python 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/src/fastopendata/extract_osm_nodes.py
+    cmd: python ${paths.source_dir}/extract_osm_nodes.py
     deps:
-    - packages/fastopendata/raw_data/us-latest.osm.pbf
+    - ${paths.raw_data}/us-latest.osm.pbf
     outs:
-    - packages/fastopendata/raw_data/united_states_nodes.csv
+    - ${paths.raw_data}/united_states_nodes.csv
   census_block_shape_files:
-    cmd: /bin/bash -c ./packages/fastopendata/src/fastopendata/block_shape_files.sh
+    cmd: /bin/bash -c ${paths.source_dir}/block_shape_files.sh
     outs:
-    - packages/fastopendata/raw_data/combined.shp
+    - ${paths.raw_data}/combined.shp
   download_wikidata:
     cmd: wget https://dumps.wikimedia.org/wikidatawiki/entities/latest-all.json.bz2 -O 
-      /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/latest-all.json.bz2
+      ${paths.raw_data}/latest-all.json.bz2
     outs:
-    - packages/fastopendata/raw_data/latest-all.json.bz2
+    - ${paths.raw_data}/latest-all.json.bz2
   extract_entities_from_wikidata:
-    cmd: cat /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/latest-all.json.bz2| pv -s `ls -l /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/latest-all.json.bz2 | awk '{print $5}'` | pbunzip2 -c | grep latitude | gzip -9 > /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/entities_with_lat_long.json.gz
+    cmd: cat ${paths.raw_data}/latest-all.json.bz2 | pv -s `ls -l ${paths.raw_data}/latest-all.json.bz2 | awk '{print $5}'` | lbunzip2 -c | parallel --pipe --block 128M grep latitude | lbzip2 -c > ${paths.raw_data}/location_entities.json.bz2
     deps:
-    - packages/fastopendata/raw_data/latest-all.json.bz2
+    - ${paths.raw_data}/latest-all.json.bz2
     outs:
-    - packages/fastopendata/raw_data/entities_with_lat_long.json.gz
-  download_pums_5_year:
-    cmd: wget -P /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/ -e robots=off -nH --recursive -np https://www2.census.gov/programs-surveys/acs/data/pums/2023/5-Year/ && /bin/bash -c /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_pums_5_year.sh
-    outs:
-    - /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_p.csv
-    - /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/psam_h.csv
+    - ${paths.raw_data}/location_entities.json.bz2
+  # download_pums_5_year:
+  #   cmd: wget -P '${paths.raw_data}' -nH --recursive -np https://www2.census.gov/programs-surveys/acs/data/pums/2023/5-Year/ && /bin/bash -c ${paths.source_dir}/pums_5_year.sh
+  #   outs:
+  #   - ${paths.raw_data}/psam_h.csv
+  #   - ${paths.raw_data}/psam_p.csv
+  # compress_pums_5_year_h:
+  #   cmd: lbzip2 -k ${paths.raw_data}/psam_h.csv
+  #   deps:
+  #   - ${paths.raw_data}/psam_h.csv
+  #   outs:
+  #   - ${paths.raw_data}/psam_h.csv.bz2
+  # compress_pums_5_year_p:
+  #   cmd: lbzip2 -k ${paths.raw_data}/psam_p.csv
+  #   deps:
+  #   - ${paths.raw_data}/psam_p.csv
+  #   outs:
+  #   - ${paths.raw_data}/psam_p.csv.bz2
   download_puma_shapefiles:
-    cmd: wget -P /Users/zernst/git/pycypher-nmetl/packages/fastopendata/raw_data/ -e robots=off -nH --recursive -np https://www2.census.gov/geo/tiger/TIGER2024/PUMA20/ && /bin/bash -c /Users/zernst/git/pycypher-nmetl/packages/fastopendata/src/fastopendata/puma_shape_files.sh && uv run /Users/zernst/git/pycypher-nmetl/packages/fastopendata/src/fastopendata/concatenate_puma_shape_files.py
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' -P ${paths.raw_data} -nH --recursive -np https://www2.census.gov/geo/tiger/TIGER2024/PUMA20/ && /bin/bash -c ${paths.source_dir}/puma_shape_files.sh && python ${paths.source_dir}/concatenate_puma_shape_files.py"
     outs:
-    - ./packages/fastopendata/raw_data/puma_combined.shp
+    - ${paths.raw_data}/puma_combined.shp
+  state_boundaries:
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' -P ${paths.raw_data} -nH --recursive -np https://www2.census.gov/geo/tiger/TIGER2024/STATE/tl_2024_us_state.zip -O ${paths.raw_data}/us_state_boundaries.zip && unzip -o ${paths.raw_data}/us_state_boundaries.zip -d ${paths.raw_data}"
+    outs:
+    - ${paths.raw_data}/tl_2024_us_state.shp
+  filter_us_wikidata:
+    cmd: python ${paths.source_dir}/filter_us_nodes.py 
+    deps:
+    - ${paths.raw_data}/location_entities.json.bz2
+    - ${paths.raw_data}/tl_2024_us_state.shp
+    outs:
+    - ${paths.raw_data}/wikidata_us_points.json
+  download_sipp_pu_data:
+    cmd: "wget --user-agent='Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)' --no-cache --header='referer: https://www2.census.gov/programs-surveys/acs/data/pums/2027/' https://www2.census.gov/programs-surveys/sipp/data/datasets/2023/pu2023_csv.zip -O ${paths.raw_data}/pu2023_csv.zip && unzip -o ${paths.raw_data}/pu2023_csv.zip -d ${paths.raw_data}/"
+    outs:
+    - ${paths.raw_data}/pu2023.csv
+  download_sipp_pu_data_dictionary:
+    cmd: wget https://www2.census.gov/programs-surveys/sipp/data/datasets/2023/pu2023_schema.json -O ${paths.raw_data}/pu2023_schema.json
+    outs:
+    - ${paths.raw_data}/pu2023_schema.json
+  download_sipp_rw_data:
+    cmd: wget https://www2.census.gov/programs-surveys/sipp/data/datasets/2023/rw2023_csv.zip -O ${paths.raw_data}/rw2023_csv.zip && unzip -o ${paths.raw_data}/rw2023_csv.zip -d ${paths.raw_data}/
+    outs:
+    - ${paths.raw_data}/rw2023.csv
+  download_housing_survey:
+    cmd: wget https://www2.census.gov/programs-surveys/ahs/2023/AHS%202023%20Value%20Labels%20Package.zip -O ${paths.raw_data}/ahs_2023.zip && unzip -o ${paths.raw_data}/ahs_2023.zip -d ${paths.raw_data} && wget https://www2.census.gov/programs-surveys/ahs/2023/AHS%202023%20National%20PUF%20v1.1%20Flat%20CSV.zip -O ${paths.raw_data}/ahs_2023_csv.zip && unzip -o ${paths.raw_data}/ahs_2023_csv.zip -d ${paths.raw_data}
+    outs:
+    - "${paths.raw_data}/AHS 2023 Value Labels.csv"
+    - "${paths.raw_data}/ahs2023n.csv"
+  download_justice_outcomes:
+    cmd: wget https://www2.census.gov/programs-surveys/cjars/datasets/2022/cjars_joe_2022_co.csv.zip -O ${paths.raw_data}/cjars_joe_2022_co.csv.zip
+    outs:
+    - "${paths.raw_data}/cjars_joe_2022_co.csv.zip"
+  unzip_justice_outcomes:
+    cmd: unzip -o ${paths.raw_data}/cjars_joe_2022_co.csv.zip -d ${paths.raw_data} && mv ${paths.raw_data}/output/cjars_joe_2022_co.csv ${paths.raw_data}/cjars_joe_2022_co.csv
+    deps:
+    - ${paths.raw_data}/cjars_joe_2022_co.csv.zip
+    outs:
+    - ${paths.raw_data}/cjars_joe_2022_co.csv
+  bzip_justice_outcomes:
+    cmd: lbzip2 -k ${paths.raw_data}/cjars_joe_2022_co.csv
+    deps:
+    - ${paths.raw_data}/cjars_joe_2022_co.csv
+    outs:
+    - ${paths.raw_data}/cjars_joe_2022_co.csv.bz2
