--- a/packages/fastopendata/src/fastopendata/ingest.yaml
+++ b/packages/fastopendata/src/fastopendata/ingest.yaml
@@ -1,5 +1,5 @@
 fact_collection: null
-fact_collection_class: null
+fact_collection_class: MemcacheFactCollection
 run_monitor: true
 logging_level: DEBUG
 
