--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,20 +1,25 @@
 name: Build Sphinx documentation
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  # Don't run on push to main, as publish-docs.yml will handle that
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
 
     steps:
     - uses: actions/checkout@v4
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
     - name: Install uv
       run: curl -LsSf https://astral.sh/uv/install.sh | sh
-    - name: Install dependencies and run tests
-      run: make docs && cp docs/_build/html/index.html .
+    - name: Install dependencies and build docs
+      run: |
+        export PATH="$HOME/.cargo/bin:$PATH"
+        make install
+        make docs
