--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,9 +45,9 @@ jobs:
       - name: Install project in development mode
         run: |
           # Install all packages in development mode
-          uv pip install -e ./packages/pycypher
-          uv pip install -e ./packages/nmetl
-          uv pip install -e ./packages/fastopendata
+          # uv pip install -e ./packages/pycypher
+          # uv pip install -e ./packages/nmetl
+          # uv pip install -e ./packages/fastopendata
           uv pip install -e .
 
       - name: Build documentation
