--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pycypher-nmetl"
 version = "0.0.1"
 description = "Declarative ETL using Cypher queries"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 keywords = ["neo4j", "cypher", "etl", "declarative"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -37,6 +37,7 @@ dependencies = [
     # Data processing
     "dvc>=3.59.1",
     "pymemcache>=4.0.0",
+    "etcd3-py>=0.1.6",
 ]
 
 [[project.authors]]
@@ -118,6 +119,9 @@ exclude_also = [
 [tool.pytest.ini_options]
 addopts = ""
 testpaths = ["tests"]
+markers = [
+    "fact_collection: Tests that require a FactCollection"
+]
 
 [tool.hatch.build.targets.wheel]
 universal = true
