--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -1,6 +1,13 @@
 [global]
 
 MONITOR_LOOP_DELAY = 5
-INNER_QUEUE_TIMEOUT = 3.0
-OUTER_QUEUE_TIMEOUT = 4.0
+INNER_QUEUE_TIMEOUT = 300.0
+OUTER_QUEUE_TIMEOUT = 400.0
 LOGGING_LEVEL = "WARNING"
+BLOOM_FILTER_SIZE = 1_000_000
+BLOOM_FILTER_ERROR_RATE = 0.01
+DEFAULT_QUEUE_SIZE = 1_000
+RAW_INPUT_QUEUE_SIZE = 1_000
+FACT_GENERATED_QUEUE_SIZE = 1_000_000_000
+CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 1_000
+TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 1_000
