checkpoint before trying mp

--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -5,9 +5,10 @@ INNER_QUEUE_TIMEOUT = 300.0
 OUTER_QUEUE_TIMEOUT = 400.0
 LOGGING_LEVEL = "WARNING"
 BLOOM_FILTER_SIZE = 1_000_000
+ETCD3_RETRY_DELAY = 3.0
 BLOOM_FILTER_ERROR_RATE = 0.01
-DEFAULT_QUEUE_SIZE = 1_000
-RAW_INPUT_QUEUE_SIZE = 1_000
-FACT_GENERATED_QUEUE_SIZE = 1_000_000_000
-CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 1_000
-TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 1_000
+DEFAULT_QUEUE_SIZE = 512
+RAW_INPUT_QUEUE_SIZE = 512
+FACT_GENERATED_QUEUE_SIZE = 512
+CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 128_000
+TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 512
