--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -1,14 +1,17 @@
 [global]
 
 MONITOR_LOOP_DELAY = 5
-INNER_QUEUE_TIMEOUT = 300.0
-OUTER_QUEUE_TIMEOUT = 400.0
+INNER_QUEUE_TIMEOUT = 3000.0
+OUTER_QUEUE_TIMEOUT = 4000.0
 LOGGING_LEVEL = "WARNING"
 BLOOM_FILTER_SIZE = 1_000_000
 ETCD3_RETRY_DELAY = 3.0
 BLOOM_FILTER_ERROR_RATE = 0.01
-DEFAULT_QUEUE_SIZE = 512
-RAW_INPUT_QUEUE_SIZE = 512
-FACT_GENERATED_QUEUE_SIZE = 512
-CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 128_000
-TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 512
+DEFAULT_QUEUE_SIZE = 1_000_000
+RAW_INPUT_QUEUE_SIZE = 1_024
+FACT_GENERATED_QUEUE_SIZE = 1_000_000_000
+CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 1_024
+TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 1_024
+DUMP_PROFILE_INTERVAL = 25
+PROFILER = false
+CLEAR_DB_ON_START = true
