--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "pymemcache>=4.0.0",
     "etcd3-py>=0.1.6",
     "rbloom>=1.5.2",
+    "snakeviz>=2.2.2",
+    "rocksdict>=0.3.25",
 ]
 
 [[project.authors]]
