--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "rbloom>=1.5.2",
     "snakeviz>=2.2.2",
     "rocksdict>=0.3.25",
+    "pandas>=2.2.3",
 ]
 
 [[project.authors]]
