--- a/packages/pycypher/pyproject.toml
+++ b/packages/pycypher/pyproject.toml
@@ -41,6 +41,15 @@ target-version = "py312"
 [tool.coverage.report]
 exclude_also = [ "def tree", "def print_tree", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
 
+[tool.coverage.run]
+omit = [
+    # omit anything in a .local directory anywhere
+    "*/.local/*",
+    "*/fastopendata/src/fastopendata/*",
+    "/*.py",
+    "*/filter_us_nodes.py"
+    ]
+
 [tool.pytest.ini_options]
 addopts = ""
 testpaths = [ "tests",]
