--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pycypher-nmetl"
 version = "0.0.1"
 description = "Declarative ETL using Cypher queries"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.13"
 keywords = ["neo4j", "cypher", "etl", "declarative"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -34,8 +34,6 @@ dependencies = [
     "pytest-timeout==2.3.1",
     "pytest-unordered==0.6.1,<1.0.0",
     "pytest-xdist>=3.6.1,<4.0.0",
-    # Data processing
-    "dvc>=3.59.1",
     "pymemcache>=4.0.0",
     "etcd3-py>=0.1.6",
     "rbloom>=1.5.2",
@@ -46,6 +44,8 @@ dependencies = [
     "pylint>=3.3.6",
     "pyarrow>=19.0.1",
     "rich>=13.9.4",
+    "chardet>=5.2.0",
+    "dvc>=3.59.1",
 ]
 
 [[project.authors]]
