back pressure in queue

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,11 @@ app.py.bak
 filter_us_nodes.py.bak
 fix_rst_imports.py.bak
 generate_rst_files.py.bak
+fdb_data/4689/coordination-0.fdq
+fdb_data/4689/coordination-1.fdq
+fdb_data/4689/processId
+fdb_data/4690/processId
+fdb_data/4691/processId
+fdb_data/4692/processId
+imampath/info
+imampath/q00000
