--- a/packages/nmetl/src/nmetl/config/config.toml
+++ b/packages/nmetl/src/nmetl/config/config.toml
@@ -3,16 +3,15 @@
 MONITOR_LOOP_DELAY = 5
 INNER_QUEUE_TIMEOUT = 2.0
 OUTER_QUEUE_TIMEOUT = 3.0
-LOGGING_LEVEL = "INFO"
+LOGGING_LEVEL = "WARNING"
 BLOOM_FILTER_SIZE = 1_000_000
 ETCD3_RETRY_DELAY = 3.0
 BLOOM_FILTER_ERROR_RATE = 0.01
-DEFAULT_QUEUE_SIZE = 1024
-RAW_INPUT_QUEUE_SIZE = 128
-FACT_GENERATED_QUEUE_SIZE = 128
-CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 128_000_000
-
-TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 128
+DEFAULT_QUEUE_SIZE = 64
+RAW_INPUT_QUEUE_SIZE = 64_000_000_000
+FACT_GENERATED_QUEUE_SIZE = 64_000_000_000
+CHECK_FACT_AGAINST_TRIGGERS_QUEUE_SIZE = 64_000_000_000
+TRIGGERED_LOOKUP_PROCESSOR_QUEUE_SIZE = 64_000_000_000
 DUMP_PROFILE_INTERVAL = 25
 PROFILER = false
 CLEAR_DB_ON_START = true
